@@ -64,6 +64,7 @@ Changes in current version:
  o do not delete uninitialized timeout event in evdns
  o Correct the documentation on buffer printf functions.
  o Don't warn on unimplemented epoll_create(): this isn't a problem, just a reason to fall back to poll or select.
+ o Correctly handle timeouts larger than 35 minutes on Linux with epoll.c.  This is probably a kernel defect, but we'll have to support old kernels anyway even if it gets fixed.
 
 
 Changes in 1.4.0:
